[project]
name = "locness-underway-qaqc"
version = "0.1.0"
description = "LOCNESS underway data processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "gpxpy>=1.6.2",
    "ipython>=9.5.0",
    "marimo>=0.15.5",
    "pandas>=2.3.2",
    "pointblank>=0.13.2",
    "prefect>=2.14.12",
    "polars>=0.20.6",
    "tomli>=2.0.1",
    "vegafusion>=2.0.2",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.8.0",
    "isfetphcalc",
    "pyarrow>=21.0.0",
    "google-genai>=1.39.1",
    "xarray>=2025.10.1",
    "netcdf4>=1.7.3",
]

[tool.uv.sources]
isfetphcalc = { git = "https://github.com/blongworth/isfetphcalc.git" }
